# dotfiles-and-configs

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
Code/User/: keybindings.json  settings.json
