[tool.poetry]
name = "package-name"
version = "0.1.0"
description = "Project to practice using poetry for dependency management."
authors = ["kismetd <hlevnmaxim@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "package-name" },
]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
bandit = "^1.7.4"
safety = "^1.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "package-name.scripts.package-name:main"
